Large Push with many files

--- a/alembic.ini
+++ b/alembic.ini
@@ -51,7 +51,7 @@ version_path_separator = os  # default: use os.pathsep
 # output_encoding = utf-8
 
 # The SQL post
-sqlalchemy.url = postgresql+psycopg2://user:pass@localhost/dbname
+sqlalchemy.url = 
 
 
 [post_write_hooks]
