--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v2
         with:
-          - python-version: "3.9"
+          python-version: "3.9"
       - name: Upgrade Pip
         run: python -m pip install --upgrade pip
       - name: Install Dependencies
